--- a/Articles/VECM/tabs/EmpiricalMotivation.tex
+++ b/Articles/VECM/tabs/EmpiricalMotivation.tex
@@ -1,6 +1,6 @@
 % \begin{landscape}
 \begin{table}[H]
-    \caption{Residential investment determinants in econometric models}
+    \caption{Residential investment determinants in econometric literature}
     \label{tab:summary_models}
     \begin{threeparttable}
         % \resizebox{\textheight}{!}{%
@@ -13,10 +13,10 @@
     \textcite{egebo_1990_MODEL} & 7 OECD countries (1960-1987) & OLS & \makecell{$RDY(+), RINT(-), PRIr(-),$\\$PRSr(+)$} \\\hline
     \textcite{mccarthyMonetaryPolicyTransmission2002} & US (1975-1985 and 1986-2000) & EC-GMM & \makecell{$HP(+), CC(-), SINT(-),$\\$LAND(-), H(-)$} \\\hline
     % \textcite{barot_2002_House} & UK and Sweden (1970-1998) & EC model & $Q(+), RINT(-)$ \\\hline
-    \textcite{gauger_residential_2003} & US (1959-79 and 1982-99) & VECM and Granger test & $M2, GDP(+), SINT(-), MR(-)$\\\hline
+    \textcite{gauger_residential_2003} & US (1959-79 and 1982-99) & VECM, Granger test & $M2, GDP(+), SINT(-), MR(-)$\\\hline
     \textcite{arestis_residential_2015} & 17 OECD countries (1970-2013) & ARDL Model & \makecell{$RHP(+), RDY(-), LRINT(-),$\\$ Cr(+), UN(-)$}\\\hline
     \textcite{kohlscheen_2018_Residential} & 15 OECD countries (1970-2017) & OLS & \makecell{$Q(+), RHP(+), GDPc(+),$\\$ POP(+), NM(+), H(-)$} \\\hline
-    \textcite{fair_macroeconometric_2018} & US (1954-2007 and 195-2015) & FIML and 3SOLS & \makecell{$AGs(\pm), RDY(+), H(-),$\\$ NMRA(-), NHW(+)$} \\\hline
+    \textcite{fair_macroeconometric_2018} & US (1954-2007 and 195-2015) & FIML, 3SOLS & \makecell{$AGs(\pm), RDY(+), H(-),$\\$ NMRA(-), NHW(+)$} \\\hline
     \hline
     \end{tabularx}
     % \end{tabular}
