Começando modelo simples (housing)

--- a/Orientacoes/Felipe/Reunioes.org
+++ b/Orientacoes/Felipe/Reunioes.org
@@ -224,7 +224,7 @@ Reunião com professor Mariano Laplane
 - Leitura Bruno e Caffe
 - Miranda e Mattos
 
-* Sugestões das variáveis filtradas
+* Sugestões das variáveis filtradas <2021-06-02 qua>
 
 - CAPEX :: Mede o quanto a firma esta investindo em bens de capital dividido pelo ativo total
 - Taxa de lucro líquida ($r_{l}$) :: Lucro líquido dividido pelo ativo total
